Fixes problem with testimonial spacing

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,6 @@ li {
 .mid-content {
     background-color: white;
     height: 500px;
-    /* padding-bottom: 150px; */
 }
 
 .mid-content-title-box{
@@ -127,18 +126,29 @@ li {
 .bot-content {
     background-color: #E5E7EB;
     padding: 150px;
+}
+
+.bot-content .testimonial {
+    background-color: inherit;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
 }
 
 .bot-content .testimonial-text {
+    flex: 1;
     font-size: 36px;
     font-style: italic;
     background-color: transparent;
     font-weight: 100;
+    max-width: 750px;
+    text-align: left;
 }
 
 .bot-content .testimonial-info {
     color:#1f2937;
     background-color: transparent;
+    font-weight: 700;
+    font-size: 20px;
+    max-width: 1225px;
+    text-align: right;
 }
